<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.MoWei.Frozen.fragment.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="io.github.MoWei.Frozen.fragment.AppList"
        android:label="@string/title_app_list"
        tools:layout="@layout/fragment_app_list" />

    <fragment
        android:id="@+id/navigation_logcat"
        android:name="io.github.MoWei.Frozen.fragment.Logcat"
        android:label="@string/title_logcat"
        tools:layout="@layout/fragment_logcat" />
</navigation>