<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/bg_app_item"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="12dp">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/icon"
        android:padding="6dp" />

    <TextView
        android:id="@+id/app_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/app_label"
        android:textColor="@color/md_on_surface"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/todo"
        android:textColor="@color/md_on_surface_variant"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:singleLine="true"
        android:text="@string/todo"
        android:textColor="@color/md_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>